--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ publish
 # build script local files
 build/buildinfo.properties
 build/config/buildinfo.properties
+
+Assets/js/vendor/modernizr-2.6.1.min.js
