--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,3 @@
-# Numerous always-ignore extensions
-*.diff
-*.err
-*.orig
-*.log
-*.rej
-*.swo
-*.swp
-*.vi
-*~
-*.sass-cache
-
-# OS or Editor folders
-.DS_Store
-._*
-Thumbs.db
-*.sublime-project
-*.sublime-workspace
-
-# Folders to ignore
-.svn
-.CVS
-
 # Ignore user generated files & Jade Testsuite-Assets
 Assets/css/*.css
+Tests/*
