--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-# Ignore user generated files & Jade Testsuite-Assets
+# Ignore user generated files, Testsuite-Assets and experimental .kit support
 Assets/css/*.css
 Tests/*
+*.kit
