--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt-contrib-watch": "~0.4.4",
     "grunt-contrib-clean": "~0.4.1",
     "grunt-text-replace": "~0.3.6",
-    "grunt-contrib-jshint": "~0.6.0"
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-modernizr": "~0.3.0"
   }
 }
