--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-text-replace": "~0.3.6",
     "grunt-contrib-jshint": "~0.6.2",
     "grunt-modernizr": "~0.3.0",
-    "grunt-imageoptim": "~1.2.6"
+    "grunt-imageoptim": "~1.2.6",
+    "grunt-shell": "~0.3.1"
   }
 }
