--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "bugs": {
     "url": "https://github.com/t3b/t3b_template/issues"
   },
+  "main": "node/index",
+  "engines": {
+    "node": ">=0.8"
+  },
   "keywords": [
     "typo3",
     "t3b",
@@ -24,6 +28,7 @@
   ],
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-cli": "~0.1.0",
     "matchdep": "~0.1.2",
     "grunt-contrib-compass": "~0.4.1",
     "grunt-contrib-watch": "~0.5.1",
@@ -33,5 +38,8 @@
     "grunt-modernizr": "~0.3.0",
     "grunt-imageoptim": "~1.2.6",
     "grunt-shell": "~0.3.1"
+  },
+  "scripts": {
+    "test": "grunt"
   }
 }
