--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "grunt-contrib-jshint": "~0.6.2",
     "grunt-modernizr": "~0.3.0",
     "grunt-imageoptim": "~1.2.6",
-    "grunt-shell": "~0.3.1"
+    "grunt-shell": "~0.3.1",
+    "jshint-stylish": "~0.1.3"
   },
   "scripts": {
     "test": "grunt travis --verbose"
