--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "grunt-modernizr": "~0.3.0",
     "grunt-imageoptim": "~1.2.6",
     "grunt-shell": "~0.3.1",
-    "jshint-stylish": "~0.1.3"
+    "jshint-stylish": "~0.1.3",
+    "grunt-css-metrics": "~0.1.2"
   },
   "scripts": {
     "test": "grunt travis --verbose"
