--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ node_js:
   - 0.8
 
 before_install:
+	- gem update --system
   - npm install -g grunt-cli
+  - gem install sass
   - gem install compass
 
 notifications:
