--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "grunt-text-replace": "~0.3.11",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-modernizr": "~0.5.1",
-    "grunt-imageoptim": "~1.4.1",
     "grunt-shell": "~0.6.4",
     "jshint-stylish": "~0.1.5",
     "grunt-css-metrics": "~0.1.2",
-    "load-grunt-configs": "~0.3.1"
+    "load-grunt-configs": "~0.3.1",
+    "grunt-contrib-imagemin": "~0.5.0"
   },
   "scripts": {
     "test": "grunt travis --verbose",
