--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "jshint-stylish": "~0.1.5",
     "grunt-css-metrics": "~0.1.2",
     "load-grunt-configs": "~0.3.1",
-    "grunt-contrib-imagemin": "~0.5.0"
+    "grunt-contrib-imagemin": "~0.5.0",
+    "grunt-contrib-requirejs": "~0.4.1"
   },
   "scripts": {
     "test": "grunt travis --verbose --env=travis",
