--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   ],
   "devDependencies": {
     "grunt": "~0.4.2",
-    "matchdep": "~0.3.0",
     "grunt-contrib-compass": "~0.7.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-clean": "~0.5.0",
@@ -40,7 +39,8 @@
     "grunt-css-metrics": "~0.1.2",
     "load-grunt-configs": "~0.3.1",
     "grunt-contrib-imagemin": "~0.5.0",
-    "grunt-contrib-requirejs": "~0.4.1"
+    "grunt-contrib-requirejs": "~0.4.1",
+    "jit-grunt": "~0.2.1"
   },
   "scripts": {
     "test": "grunt travis --verbose --env=travis",
