--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "load-grunt-configs": "~0.3.1",
     "grunt-contrib-imagemin": "~0.5.0",
     "grunt-contrib-requirejs": "~0.4.1",
-    "jit-grunt": "~0.2.1"
+    "jit-grunt": "~0.2.1",
+    "grunt-bower-task": "~0.3.4"
   },
   "scripts": {
     "test": "grunt travis --verbose --env=travis",
-    "postinstall": "grunt init && git submodule init && git submodule update"
+    "postinstall": "grunt init"
   },
   "dependencies": {
     "time-grunt": "~0.2.5"
