--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "t3b_template",
-  "description": "A Kickstarter Template-Extension which is based on Fluid and Compass",
+  "description": "A Kickstarter Template-Extension which is based on Fluid and Sass",
   "version": "1.0.0a",
   "homepage": "github.com/t3b/t3b_template",
   "author": {
@@ -29,7 +29,6 @@
   ],
   "devDependencies": {
     "grunt": "~0.4.2",
-    "grunt-contrib-compass": "~0.7.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-text-replace": "~0.3.11",
@@ -42,7 +41,9 @@
     "grunt-contrib-imagemin": "~0.5.0",
     "grunt-contrib-requirejs": "~0.4.1",
     "jit-grunt": "~0.2.1",
-    "grunt-bower-task": "~0.3.4"
+    "grunt-bower-task": "~0.3.4",
+    "grunt-contrib-sass": "~0.7.3",
+    "grunt-contrib-copy": "~0.5.0"
   },
   "scripts": {
     "test": "grunt travis --verbose --env=travis"
