--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "jit-grunt": "~0.2.1",
     "grunt-bower-task": "~0.3.4",
     "grunt-contrib-sass": "~0.7.3",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-autoprefixer": "~0.7.2"
   },
   "scripts": {
     "test": "grunt travis --verbose --env=travis"
