--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "grunt-bower-task": "~0.3.4",
     "grunt-contrib-sass": "~0.7.3",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-autoprefixer": "~0.7.2"
+    "grunt-autoprefixer": "~0.7.2",
+    "grunt-styleguide": "~0.2.15"
   },
   "scripts": {
     "test": "grunt travis --verbose --env=travis"
