[TASK] Make sure that generated Sass sourcemaps won't pollute the repository

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,6 @@ Resources/Private/Javascripts/Libaries/almond/*
 Resources/Private/Javascripts/Libaries/modernizr/*
 Resources/Private/Javascripts/Libaries/requirejs/*
 Resources/Public/Stylesheets/*.css
+Resources/Public/Stylesheets/*.map
 Documentation/*.html
 Documentation/public
