--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "t3b_template",
   "description": "A Kickstarter Template-Extension which is based on Fluid and Sass",
-  "version": "1.0.0a",
+  "version": "1.0.1b",
   "homepage": "github.com/t3b/t3b_template",
   "author": {
     "name": "Tylls Weiß",
