--- a/package.json
+++ b/package.json
@@ -29,23 +29,24 @@
   ],
   "devDependencies": {
     "grunt": "~0.4.2",
-    "grunt-contrib-watch": "~0.5.3",
+    "grunt-autoprefixer": "~0.7.2",
+    "grunt-bower-task": "~0.3.4",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-text-replace": "~0.3.11",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-imagemin": "~0.5.0",
     "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-contrib-sass": "~0.7.3",
+    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-css-metrics": "~0.1.2",
     "grunt-modernizr": "~0.5.1",
     "grunt-shell": "~0.6.4",
-    "jshint-stylish": "~0.1.5",
-    "grunt-css-metrics": "~0.1.2",
-    "load-grunt-configs": "~0.3.1",
-    "grunt-contrib-imagemin": "~0.5.0",
-    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-styleguide": "~0.2.15",
+    "grunt-text-replace": "~0.3.11",
     "jit-grunt": "~0.2.1",
-    "grunt-bower-task": "~0.3.4",
-    "grunt-contrib-sass": "~0.7.3",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-autoprefixer": "~0.7.2",
-    "grunt-styleguide": "~0.2.15"
+    "jshint-stylish": "~0.1.5",
+    "load-grunt-configs": "~0.3.1"
   },
   "scripts": {
     "test": "grunt travis --verbose --env=travis"
