[TASK] Create a seperate 'Build/Sources' structure for js files in the 'Public/' scope
This will solve #37

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@ node_modules/*
 composer.lock
 
 # Source-/Generated-files which shouldn't pollute the source repository
-Resources/Private/Javascripts/Libaries/almond/*
-Resources/Private/Javascripts/Libaries/modernizr/*
-Resources/Private/Javascripts/Libaries/requirejs/*
+Resources/Public/Javascripts/Build/*.js
+Resources/Public/Javascripts/Build/*.map
+Resources/Public/Javascripts/Sources/Vendor/*
 Resources/Public/Stylesheets/*.css
 Resources/Public/Stylesheets/*.map
 Documentation/*.html
