[TASK] Make the file header banner more flexible with an 'description' argument, and append the banner to all .css files generated with grunt-contrib-sass

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,7 @@ node_modules/*
 composer.lock
 
 # Source-/Generated-files which shouldn't pollute the source repository
-Resources/Public/Javascripts/Build/*.js
-Resources/Public/Javascripts/Build/*.map
+Resources/Public/Javascripts/Build/**/*
 Resources/Public/Javascripts/Sources/Vendor/*
 Resources/Public/Stylesheets/*.css
 Resources/Public/Stylesheets/*.map
