--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-autoprefixer": "~0.7.2",
     "grunt-bower-task": "~0.3.4",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-connect": "^0.7.1",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-imagemin": "~0.7.0",
     "grunt-contrib-jshint": "~0.10.0",
@@ -40,13 +41,23 @@
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-css-metrics": "~0.1.2",
+    "grunt-karma": "^0.8.3",
     "grunt-modernizr": "~0.5.1",
     "grunt-shell": "~0.7.0",
     "grunt-styleguide": "~0.2.15",
     "grunt-text-replace": "~0.3.11",
     "jit-grunt": "~0.6.0",
     "jshint-stylish": "~0.2.0",
-    "load-grunt-configs": "~0.4.0"
+    "karma": "^0.12.16",
+    "karma-chrome-launcher": "^0.1.3",
+    "karma-coverage": "^0.2.1",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-jasmine": "^0.1.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-requirejs": "^0.2.1",
+    "karma-safari-launcher": "^0.1.1",
+    "load-grunt-configs": "~0.4.0",
+    "requirejs": "^2.1.11"
   },
   "scripts": {
     "test": "grunt travis --verbose --env=travis"
