--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ composer.lock
 
 # Source-/Generated-files which shouldn't pollute the source repository
 Resources/Public/Javascripts/Build/**/*
-Resources/Public/Javascripts/Tests/Coverage
+Resources/Public/Javascripts/Tests/Coverages/**/*
 Resources/Public/Javascripts/Sources/Vendor/*
 Resources/Public/Stylesheets/*.css
 Resources/Public/Stylesheets/*.map
