--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ node_modules/*
 # Composer dependency lock file
 composer.lock
 
-# Source-/Generated-files which shouldn't pollute the source repository
+# Source-/Generated nad Vendor-Files which shouldn't pollute the source repository
+Build/Templates/kss-node_glaciertheme
 Resources/Public/Javascripts/Build/**/*
 Resources/Public/Javascripts/Tests/Coverages/**/*
 Resources/Public/Javascripts/Sources/Vendor/*
