--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-requirejs": "^0.2.1",
     "karma-safari-launcher": "^0.1.1",
+    "kss-node_glaciertheme": "^1.0.0-a",
     "load-grunt-configs": "~0.4.0",
     "requirejs": "^2.1.11"
   },
