--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "keywords": ["TYPO3 CMS", "templating", "boilerplate", "bootstrap", "t3b", "fluidcontent", "fedext", "fluid", "sass", "grunt"],
   "homepage": "https://github.com/t3b/t3b_template",
   "license": "MIT",
-  "version": "1.0.0a",
+  "version": "1.0.1",
   "support": {
     "issues": "https://github.com/t3b/t3b_template/issues"
   }
