--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-css-metrics": "~0.1.2",
+    "grunt-jsdoc": "^0.5.4",
     "grunt-karma": "^0.8.3",
     "grunt-modernizr": "~0.5.1",
     "grunt-shell": "~0.7.0",
