[TASK] Fix a typo

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.1",
   "homepage": "github.com/t3b/t3b_template",
   "author": {
-    "name": "Tylls Weiß",
+    "name": "Tyll Weiß",
     "email": "inkdpixels@gmail.com",
     "company": "",
     "url": "https://github.com/Inkdpixels"
