--- a/package.json
+++ b/package.json
@@ -28,17 +28,16 @@
     "sass"
   ],
   "devDependencies": {
-    "almond": "^0.2.9",
+    "browserify": "^4.2.0",
     "grunt": "~0.4.2",
     "grunt-autoprefixer": "~0.8.1",
+    "grunt-browserify": "^2.1.3",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-imagemin": "~0.7.0",
     "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-sass": "~0.7.3",
-    "grunt-contrib-uglify": "^0.5.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-css-metrics": "~0.1.2",
     "grunt-jsdoc": "^0.5.4",
@@ -50,17 +49,18 @@
     "jit-grunt": "~0.7.0",
     "jshint-stylish": "~0.2.0",
     "karma": "^0.12.16",
+    "karma-browserify": "^0.2.1",
     "karma-chrome-launcher": "^0.1.3",
     "karma-coverage": "^0.2.1",
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4",
-    "karma-requirejs": "^0.2.1",
     "karma-safari-launcher": "^0.1.1",
     "kss-node_glaciertheme": "^1.0.0-a",
     "load-grunt-configs": "~0.4.0",
     "napa": "^0.4.1",
-    "requirejs": "^2.1.11"
+    "stripify": "^1.2.0",
+    "uglifyify": "^2.4.0"
   },
   "scripts": {
     "install": "napa",
