--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "jit-grunt": "~0.7.0",
     "jshint-stylish": "~0.2.0",
     "karma": "^0.12.16",
-    "karma-browserify": "^0.2.1",
     "karma-chrome-launcher": "^0.1.3",
+    "karma-commonjs": "0.0.10",
     "karma-coverage": "^0.2.1",
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5",
