--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "test": "grunt travis --verbose --env=travis"
   },
   "dependencies": {
-    "time-grunt": "~0.3.1"
+    "time-grunt": "^0.4.0"
   },
   "napa": {
     "modernizr": "Modernizr/Modernizr#v2.8.1"
