--- a/package.json
+++ b/package.json
@@ -27,9 +27,14 @@
     "fluid",
     "sass"
   ],
-  "devDependencies": {
+  "dependencies": {
     "almond": "^0.2.9",
+    "requirejs": "^2.1.11",
+    "kss-node_glaciertheme": "^1.0.0-a"
+  },
+  "devDependencies": {
     "grunt": "~0.4.2",
+    "time-grunt": "^0.4.0",
     "grunt-autoprefixer": "~0.1.0",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-connect": "^0.8.0",
@@ -57,17 +62,12 @@
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-requirejs": "^0.2.2",
     "karma-safari-launcher": "^0.1.1",
-    "kss-node_glaciertheme": "^1.0.0-a",
     "load-grunt-configs": "~0.4.0",
-    "napa": "^0.4.1",
-    "requirejs": "^2.1.11"
+    "napa": "^0.4.1"
   },
   "scripts": {
     "install": "napa",
     "test": "grunt travis --verbose --env=travis"
-  },
-  "dependencies": {
-    "time-grunt": "^0.4.0"
   },
   "napa": {
     "modernizr": "Modernizr/Modernizr#v2.8.1"
