--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "browserify": "^4.2.0",
     "grunt": "~0.4.2",
+    "time-grunt": "^0.4.0",
     "grunt-autoprefixer": "~0.8.1",
     "grunt-browserify": "^2.1.3",
     "grunt-contrib-clean": "~0.5.0",
