--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   "devDependencies": {
     "browserify": "^4.2.0",
     "grunt": "~0.4.2",
-    "time-grunt": "^0.4.0",
     "grunt-autoprefixer": "~0.8.1",
     "grunt-browserify": "^2.1.3",
     "grunt-contrib-clean": "~0.5.0",
@@ -50,6 +49,7 @@
     "grunt-shell": "~0.7.0",
     "grunt-styleguide": "~0.2.15",
     "grunt-text-replace": "~0.3.11",
+    "ink-docstrap": "^0.4.12",
     "jit-grunt": "~0.7.0",
     "jshint-stylish": "~0.2.0",
     "karma": "^0.12.16",
@@ -64,6 +64,7 @@
     "load-grunt-configs": "~0.4.0",
     "napa": "^0.4.1",
     "stripify": "^1.2.0",
+    "time-grunt": "^0.4.0",
     "uglifyify": "^2.4.0"
   },
   "scripts": {
