[TASK] Update the kss-node to the latest stable version

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "sass"
   ],
   "dependencies": {
-    "kss-node_glaciertheme": "^1.0.0-a"
+    "kss-node_glaciertheme": "^1.0.1"
   },
   "devDependencies": {
     "browserify": "^4.2.0",
