--- a/package.json
+++ b/package.json
@@ -28,29 +28,13 @@
     "sass"
   ],
   "dependencies": {
-    "kss-node_glaciertheme": "^1.0.1"
+    "kss-node_glaciertheme": "^1.0.1a"
   },
   "devDependencies": {
-    "browserify": "^4.2.0",
-    "grunt": "~0.4.2",
-    "grunt-autoprefixer": "~0.8.1",
-    "grunt-browserify": "^2.1.3",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-connect": "^0.8.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-imagemin": "~0.7.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-sass": "~0.7.3",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-css-metrics": "~0.1.2",
-    "grunt-jsdoc": "^0.5.4",
-    "grunt-karma": "^0.8.3",
-    "grunt-modernizr": "~0.5.1",
-    "grunt-shell": "~0.7.0",
-    "grunt-styleguide": "~0.2.15",
-    "grunt-text-replace": "~0.3.11",
-    "ink-docstrap": "^0.4.12",
-    "jit-grunt": "~0.7.0",
+    "browserify": "^5.11.1",
+    "gulp": "^3.8.8",
+    "gulp-autoprefixer": "^1.0.0",
+    "gulp-ruby-sass": "^0.7.1",
     "jshint-stylish": "~0.2.0",
     "karma": "^0.12.16",
     "karma-chrome-launcher": "^0.1.3",
@@ -60,12 +44,8 @@
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-safari-launcher": "^0.1.1",
-    "kss-node_glaciertheme": "^1.0.0-a",
-    "load-grunt-configs": "~0.4.0",
     "napa": "^0.4.1",
-    "stripify": "^1.2.0",
-    "time-grunt": "^0.4.0",
-    "uglifyify": "^2.4.0"
+    "stripify": "^1.2.0"
   },
   "scripts": {
     "install": "napa",
