--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
     "fluid",
     "sass"
   ],
-  "dependencies": {
-    "kss-node_glaciertheme": "^1.0.1a"
-  },
+  "dependencies": {},
   "devDependencies": {
     "browserify": "^5.11.1",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^1.0.0",
+    "gulp-jsdoc": "^0.1.4",
+    "gulp-kss": "0.0.2",
+    "gulp-rename": "^1.2.0",
     "gulp-ruby-sass": "^0.7.1",
+    "ink-docstrap": "^0.4.12",
     "jshint-stylish": "~0.2.0",
     "karma": "^0.12.16",
     "karma-chrome-launcher": "^0.1.3",
@@ -44,8 +46,10 @@
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-safari-launcher": "^0.1.1",
+    "kss-node_glaciertheme": "^1.0.1a",
     "napa": "^0.4.1",
-    "stripify": "^1.2.0"
+    "stripify": "^1.2.0",
+    "vinyl-source-stream": "^1.0.0"
   },
   "scripts": {
     "install": "napa",
