--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
     "browserify": "^5.11.1",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^1.0.0",
-    "gulp-jsdoc": "^0.1.4",
     "gulp-kss": "0.0.2",
     "gulp-rename": "^1.2.0",
     "gulp-ruby-sass": "^0.7.1",
+    "gulp-shell": "^0.2.9",
     "ink-docstrap": "^0.4.12",
+    "jsdoc": "^3.3.0-alpha9",
     "jshint-stylish": "~0.2.0",
     "karma": "^0.12.16",
     "karma-chrome-launcher": "^0.1.3",
@@ -46,6 +47,7 @@
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-safari-launcher": "^0.1.1",
+    "kss": "^1.0.0",
     "kss-node_glaciertheme": "^1.0.1a",
     "napa": "^0.4.1",
     "stripify": "^1.2.0",
